[gd_scene load_steps=2 format=3 uid="uid://k0dtqul2l4om"]

[ext_resource type="Script" uid="uid://bkqdk4ve86eu6" path="res://screens/game/game.gd" id="1_oimob"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oimob")

[node name="WinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 344.0
offset_right = 364.0
offset_bottom = 440.0
text = "Win"

[node name="GoBackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 627.0
offset_top = 365.0
offset_right = 762.0
offset_bottom = 446.0
text = "GoBack"

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 389.0
offset_top = 56.0
offset_right = 707.0
offset_bottom = 187.0

[node name="KillEnemyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 750.0
offset_top = 215.0
offset_right = 937.0
offset_bottom = 301.0
text = "Kill Enemy"

[node name="DeathEnemiesLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 955.0
offset_top = 208.0
offset_right = 1056.0
offset_bottom = 306.0
theme_override_font_sizes/font_size = 40
text = "0"

[connection signal="pressed" from="WinButton" to="." method="_on_win_button_pressed"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_go_back_button_pressed"]
[connection signal="pressed" from="KillEnemyButton" to="." method="_on_kill_enemy_button_pressed"]
